--- a/대회문제/index.html
+++ b/대회문제/index.html
@@ -36,7 +36,7 @@
                                         <h2>아파트 소개</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -59,7 +59,7 @@
                                         <h2>대표회의</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -82,7 +82,7 @@
                                         <h2>입주민 공간</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -126,7 +126,7 @@
                                         <h2>주변정보</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -148,7 +148,7 @@
                                         <h2>예약관리</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -169,7 +169,7 @@
                                         <h2>마이페이지</h2>
                                         <p>GRAND PALACE SINCE 1985</p>
                                         <div class="img_box mark">
-                                            <img src="./imgs/logo.png" alt="logo">
+                                            <img src="./imgs/icon.png" alt="logo">
                                         </div>
                                     </div>
                                     <div class="l_item flex">
@@ -184,7 +184,7 @@
                 </nav>
             </div>
         </header>
-        <section id="slide">
+        <section id="slide" >
             <div class="slide">
                 <div class="slide_items flex">
                     <div class="item">
@@ -202,6 +202,263 @@
                 </div>
             </div>
         </section>
+        <section id="tab" class="section">
+            <div class="container">
+                <input type="radio" name="tab_menu" id="tab1" checked>
+                <input type="radio" name="tab_menu" id="tab2">
+                <input type="radio" name="tab_menu" id="tab3">
+                <h2 class="title">공지사항</h2>
+                <div class="tab_menu grid">
+                    <label for="tab1">아파트 공지사항</label>
+                    <label for="tab2">입대의 의결 공지사항</label>
+                    <label for="tab3">민원처리 공지사항</label>
+                </div>
+                <div class="tab tab1 grid">
+                    <div class="item grid">
+                        <img src="./imgs/img (1).jpg" alt="">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (2).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (3).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (4).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (5).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (6).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                </div>
+                <div class="tab tab2 grid">
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (2).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (1).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (3).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (4).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (5).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (6).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                </div>
+                <div class="tab tab3 grid">
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (1).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (2).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (3).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (4).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (5).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                    <div class="item grid">
+                        <div class="img_box"><img src="./imgs/img (6).jpg" alt=""></div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed aliquid nisi esse, eum temporibus pariatur similique porro nostrum vel minima maxime corrupti velit in quas? Consequuntur fugit sint delectus qui!</p>
+                        <h2>05/31</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="topoo" class="section">
+            <div class="container">
+                <h2 class="title">투표 결과</h2>
+                <div class="graph grid">
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                    <div class="item"></div>
+                </div>
+            </div>
+        </section>
+        
+        <section id="event" class="section">
+            <div class="container">
+                <h2 class="title">이벤트</h2>
+                <div class="event grid">
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (1).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (2).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (3).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (4).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (5).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (6).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (1).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (2).jpg" alt="">
+                            <div class="text_box flex">
+                                <p>GRAND PALACE</p>
+                                <div class="btn flex">상세내용 보기</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="anlbum" class="section">
+            <div class="container">
+                <h2 class="title">앨범</h2>
+                <div class="anlbum grid">
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (1).jpg" alt="">
+                            <div class="text_box">
+                                <p>ALL ARTMENT<br>
+                                     VIEW</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (2).jpg" alt="">
+                            <div class="text_box">
+                                <p>GAREN IAMGE <br>
+                                    VIEW
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (3).jpg" alt="">
+                            <div class="text_box">
+                                <p>THE LIVING<br>
+                                     ROOM</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img_box">
+                            <img src="./imgs/img (4).jpg" alt="">
+                            <div class="text_box">
+                                <p>ALL HOME  <br>
+                                    IMAGE </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="banner" class="section">
+            <div class="container">
+                <h2 class="title">배너</h2>
+                <div class="banner">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima vel laborum tempora,<br>
+                         explicabo natus nisi? Sunt, voluptatem blanditiis! Sunt, architecto<br>
+                         sequi provident reprehenderit ea illo autem culpa minima?<br>
+                          Molestiae, illo!
+                        </p>
+                </div>
+            </div>
+        </section>
         <footer>
             <div class="container">
                 <div class="grid footer">
@@ -209,7 +466,7 @@
                         <div class="img_box"><img src="./imgs/logo.png" alt="logo"></div>
                         <p>서울특별시 용산구 이태원로 15길</p>
                         <p>051)0421-4245</p>
-                        <p>GRAND PALCE</p>
+                        <!-- <p>GRAND PALCE</p> -->
                     </div>
                     <div class="l_item flex">
                         <div class="content">저작권 정보</div>
