--- a/대회문제/index.html
+++ b/대회문제/index.html
@@ -363,11 +363,11 @@
                 <div class="container">
                     <h2 class="title">투표 결과</h2>
                     <div class="graph grid">
-                        <div class="item"></div>
-                        <div class="item"></div>
-                        <div class="item"></div>
-                        <div class="item"></div>
-                        <div class="item"></div>
+                        <div class="item_wrap flex"><div class="item" data-title="1번"></div></div>
+                        <div class="item_wrap flex"><div class="item" data-title="2번"></div></div>
+                        <div class="item_wrap flex"><div class="item" data-title="3번"></div></div>
+                        <div class="item_wrap flex"><div class="item" data-title="4번"></div></div>
+                        <div class="item_wrap flex"><div class="item" data-title="5번"></div></div>
                     </div>
                 </div>
             </article>
