--- a/B모듈(대회후)/event.html
+++ b/B모듈(대회후)/event.html
@@ -181,18 +181,18 @@
             <div class="call flex">
                 <div class="aa grid"></div>
                 <div class="evnet grid">
-                    <div class="item grid" data-year="2022" data-month="1"><p class="sub_title">2022년 1월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="2"><p class="sub_title">2022년 2월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="3"><p class="sub_title">2022년 3월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="4"><p class="sub_title">2022년 4월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="5"><p class="sub_title">2022년 5월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="6"><p class="sub_title">2022년 6월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="7"><p class="sub_title">2022년 7월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="8"><p class="sub_title">2022년 8월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="9"><p class="sub_title">2022년 9월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="10"><p class="sub_title">2022년 10월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="11"><p class="sub_title">2022년 11월 행사</p></div>
-                    <div class="item grid" data-year="2022" data-month="12"><p class="sub_title">2022년 12월 행사</p></div>
+                    <div class="item grid" data-year="2022" data-month="1"><div class="flex sub_title"><p class="years">2022</p><p>년 1월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="2"><div class="flex sub_title"><p class="years">2022</p><p>년 2월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="3"><div class="flex sub_title"><p class="years">2022</p><p>년 3월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="4"><div class="flex sub_title"><p class="years">2022</p><p>년 4월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="5"><div class="flex sub_title"><p class="years">2022</p><p>년 5월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="6"><div class="flex sub_title"><p class="years">2022</p><p>년 6월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="7"><div class="flex sub_title"><p class="years">2022</p><p>년 7월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="8"><div class="flex sub_title"><p class="years">2022</p><p>년 8월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="9"><div class="flex sub_title"><p class="years">2022</p><p>년 9월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="10"><div class="flex sub_title"><p class="years">2022</p><p>년 10월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="11"><div class="flex sub_title"><p class="years">2022</p><p>년 11월 행사</p></div></div>
+                    <div class="item grid" data-year="2022" data-month="12"><div class="flex sub_title"><p class="years">2022</p><p>년 12월 행사</p></div></div>
                 </div>
             </div>
         </div>
