--- a/C모듈(대회후)/1.html
+++ b/C모듈(대회후)/1.html
@@ -1,3 +1,6 @@
 <input type="text " placeholder="" checked>
 
 <textarea name="" id="" cols="30" rows="10"></textarea>
+
+label{ for="voting$" class="voting_label$" }*3
+input{type="radio" id="voting$" name="voting"}*3
